add team deletion operation
