# lib/db/models/team/model.js
@@ -7,7 +7,7 @@ import logger from '../../../util/logger.js'
 import mongo from 'mongodb'
 import {v4 as uuidv4} from 'uuid'
 import util from 'util'
-import {addGroupUser} from '../group/model.js'
+import {addGroupUser, removeGroupUser} from '../group/model.js'
 
 const log = logger.createLogger('dbapi:team')
 
@@ -116,12 +116,28 @@ export const getTeamsByGroup = async(group) => {
     return db.teams.find({groups: {$in: [group]}}).toArray()
 }
 
+/** @returns {Promise<mongo.DeleteResult| null>} */
+export const deleteTeam = async(id) => {
+    await removeGroupsAndUsers(id)
+    return db.teams.deleteOne({id: id})
+}
+
 const updateGroupsAndUsers = async(/** @type {string} */ teamId) => {
     log.debug(`updateGroupsAndUsers for ${teamId}`)
     const team = await getTeamById(teamId)
     for (const group of team?.groups) {
         for (const user of team?.users) {
             await addGroupUser(group, user)
+        }
+    }
+}
+
+const removeGroupsAndUsers = async(teamId) => {
+    log.debug(`removeGroupsAndUsers for ${teamId}`)
+    const team = await getTeamById(teamId)
+    for (const group of team?.groups) {
+        for (const user of team?.users) {
+            await removeGroupUser(group, user)
         }
     }
 }
