# lib/units/api/controllers/teams.js
@@ -127,7 +127,13 @@ async function getGroupsTeams(req, res) {
     apiutil.respond(res, 200, 'Groups team info', {teams: response})
 }
 
-export {getTeamById, createTeam, updateTeam, removeFromTeam, removeUserFromTeam, removeGroupFromTeam, getUserTeams, getGroupsTeams}
+async function deleteTeam(req, res) {
+    const teamId = req.params.id
+    await dbapi.deleteTeam(teamId)
+    apiutil.respond(res, 200, 'Team deleted')
+}
+
+export {getTeamById, createTeam, updateTeam, removeFromTeam, removeUserFromTeam, removeGroupFromTeam, getUserTeams, getGroupsTeams, deleteTeam}
 export default {
     getTeamById: getTeamById,
     createTeam: createTeam,
@@ -136,5 +142,6 @@ export default {
     removeUserFromTeam: removeUserFromTeam,
     removeGroupFromTeam: removeGroupFromTeam,
     getUserTeams: getUserTeams,
-    getGroupsTeams: getGroupsTeams
+    getGroupsTeams: getGroupsTeams,
+    deleteTeam: deleteTeam,
 }
